applications/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  type: ClusterIP
  ports:
    - port: 8008
      targetPort: 8008
      protocol: TCP
      name: http
  selector:
    app: synapse
