applications/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: matrix
spec:
  rules:
    - host: maetwix.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
